<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_wifi"
        android:id="@+id/bt_wifi"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_blue"
        android:id="@+id/bt_blue"
        android:layout_below="@+id/bt_wifi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_account"
        android:id="@+id/bt_account"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>